--- a/251215 - Gallumbos Ciruelo/style.css
+++ b/251215 - Gallumbos Ciruelo/style.css
@@ -13,9 +13,9 @@
     --margin-top-header: 4px;
 }
 
-/**************************/
-/*         GLOBAL         */
-/**************************/
+/***********************************************************************************************/
+/*                                          GLOBAL                                             */
+/***********************************************************************************************/  
 * {
     box-sizing: border-box;
     margin: 0;
@@ -26,10 +26,13 @@
 
 html, body { 
 min-height: 100vh; 
-min-width: 420px;
+min-width: 430px;
 }   
 
 body{
+    position:static;
+    margin: 0;
+    padding-top: 60px;
     display: grid;
     grid-template-columns:auto;
     grid-template-rows:auto 1fr auto;
@@ -40,16 +43,46 @@ body{
     background-color: var(--color-bgmain);
 }
 
-/**************************/
-/*          BODY          */
-/**************************/
+section {
+  scroll-margin-top: 80px; /* ajustas por el header */
+}
+
+
+.titulo-section{
+    margin: 20px 0 0;
+    text-align: left;
+    color: rgb(131, 91, 91);
+}
+
+.separador-section{
+    margin-bottom: 20px;
+    border: 1px solid rgb(131, 91, 91);
+    box-shadow: 1px 2px 3px rgba(2, 2, 2, 0.8);
+    
+}
+
+.frutilla {
+    color: purple;
+    font-weight: bold;
+}
+
+.gold {
+    color: rgb(196, 116, 42);
+    font-weight: bold;
+}
+
+
+/***********************************************************************************************/
+/*                                            BODY                                             */
+/***********************************************************************************************/  
 
 /*   Header   */
     
 header{
     grid-area: header;
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     display: grid;
     grid-template-columns: auto auto 1fr;
@@ -85,11 +118,6 @@ header > hgroup{
 .header-eslogan {
     color: var(--color-txt);
     font-size: 1rem;
-}
-
-.header-eslogan > span {
-    color: purple;
-    font-weight: bold;
 }
 
 /* Tercera Columna (menú nav)*/
@@ -184,20 +212,226 @@ header > hgroup{
 }
 
 
-/**************************/
-/*          Main          */
-/**************************/
- main{
+/***********************************************************************************************/
+/*                                            MAIN                                             */
+/***********************************************************************************************/  
+
+main{
     margin-top: 20px;
     grid-area: main;    
+    margin: 20px auto 0;
+    padding: 0 15px;
+}
 
-    }
+/***********************************************************************************************/
+/*                                            HOME                                             */
+/***********************************************************************************************/  
+
+.about-productos{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ocultado{
+    display: none;
+}
+
+.about-productos img{
+  width: 100%;
+  max-width: 1100px;   /* el ancho máximo que quieras */
+  height: auto;
+  max-height: 300px;   /* opcional */
+  object-fit: cover;
+  border-radius: 20px;
+  margin-bottom: 60px;
+  margin-top: 20px;
+}
+
+.about-productos p{
+    margin-bottom: 20px;
+}
+
+/***********************************************************************************************/
+/*                                        DESTACADOS                                           */
+/***********************************************************************************************/  
+
+.conjunto-total{
+margin-top: 50px;
+justify-items: center;
+}
+
+.grid-abuelita{
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-areas: 
+        "abuela cajitas";
+    padding-bottom: 30px;
+}
+
+.grid-cajitas{
+    grid-area: cajitas;
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: 
+        "caja-dest1"
+        "caja-dest2"
+        "caja-dest3";
+}
+.grid-abuelita img{
+    grid-area: abuela;
+    justify-self: center;
+    max-height: 300px;
+    height: auto;
+}
+
+.grid-cajitas .caja-destacada1{
+    grid-area: caja-dest1;
+    text-align: start;
+    margin-left: 15px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.grid-cajitas .caja-destacada2{
+    grid-area: caja-dest2;
+    text-align: start;
+    margin-left: 15px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.grid-cajitas .caja-destacada3{
+    grid-area: caja-dest3;
+    text-align: start;
+    margin-left: 15px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.cajita{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    align-self: center;
+    height: auto;
+    padding: 0 20px;
+    max-width: 300px;
+}
+
+
+
+
+
+/***********************************************************************************************/
+/*                                       COLECCIONES                                           */
+/***********************************************************************************************/  
+
+/**************************/
+/*  Etiquetas Productos   */
+/**************************/  
+
+.cont-col {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  margin-bottom: 60px;
+}
+
+.cont-col-item{
+    background-color: #f5ffff;
+    height: auto;  
+    max-width: 200px;
+    min-width: 200px;  
+    text-align: center;
+    border-radius: 10px;
+    list-style-type: none; 
+    transition: transform 300ms ease; 
+    margin-bottom: 20px;
+    border: 1px solid rgba(51, 51, 51, 0.226);
+}
+
+.producto figure { 
+    min-height: 280px;
+    
+    display: grid;
+    place-items: center;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto 1fr;
+    grid-template-areas: 
+        "fig-imagen"
+        "fig-linea"
+        "fig-texto";
+}
+
+.producto figure img        { grid-area: fig-imagen; }
+.producto figure hr         { grid-area: fig-linea;  }
+.producto figure figcaption { grid-area: fig-texto;  }
+ 
+
+.cont-col-item:hover {
+    transform: scale(1.10);
+    box-shadow: 1px 1px 20px rgba(0, 87, 128, 0.4);  
+}
+
+.producto img{
+    height: 100px;
+    border-radius: 10px; 
+    margin-top: 7px;
+}
+
+.producto figcaption{
+    padding: 0 20px;
+}
+
+.producto h3{
+    padding: 10px 0;
+    font-size: 16px;
+    border-bottom: 2px solid rgba(51, 51, 51, 0.226);
+    border-top: 2px solid rgba(51, 51, 51, 0.226); 
+    border-color: rgba(102, 55, 55, 0.199);
+
+}
+
+.producto .line{
+    margin: 20px 40px 10px; 
+    width: 80%;
+    border-bottom: 1px solid rgba(51, 51, 51, 0.226);
+}
+
+.producto .precio{
+    padding: 10px 0px;
+    font-size: 20px;
+    height: auto;
+}
+
+
+
+
+
+
+
+/***********************************************************************************************/
+/*                                       CONTACTANOS                                           */
+/***********************************************************************************************/  
+
 
 
 /**************************/
 /*    Grid Formulario     */
 /**************************/
 .form{
+    background-color: white;
+    justify-self: center;
+    border-radius: 10px;
+    border: 1px solid rgb(116, 115, 115);
+    padding: 20px; /* Interior */
+    margin: 60px auto;
+    max-width: max-content;
+
     display: grid;
     grid-template-columns: auto auto;
     grid-template-rows: auto auto auto auto;
@@ -206,7 +440,6 @@ header > hgroup{
             "telefono consulta"
             "mensaje mensaje"
             "buttons buttons";
-
 }
 
 .nombre{ grid-area: nombre; }
@@ -217,30 +450,6 @@ header > hgroup{
 .consulta{ grid-area: consulta; }
 .mensaje{ grid-area: mensaje; }
 .buttons{ grid-area: buttons; }
-
-
-
-/**************************/
-/*   Estilos Formulario   */
-/**************************/
-
-/* CONTACTO */    
-.contacto{
-    background-color: white;
-    justify-self: center;
-    border-radius: 10px;
-    border: 1px solid rgb(116, 115, 115);
-    padding: 20px; /* Interior */
-    margin: 20px auto;
-    max-width: max-content;
-}
-
-.contacto > h2{
-    text-align: center;
-    margin-bottom: 20px;
-    text-decoration: underline;
-}
-
 
 
 /**************************/
@@ -346,15 +555,41 @@ header > hgroup{
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4);
 }
 
-/**************************/
-/*         FOOTER         */
-/**************************/
+/***********************************************************************************************/
+/*                                    SOBRE NOSOTROS                                           */
+/***********************************************************************************************/  
+
+.about-escaparate{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-areas: "escaparate descripcion";
+    padding-bottom: 60px;
+}
+
+.about-escaparate img{
+    grid-area: escaparate;
+    justify-self: center;
+    max-height: 300px;
+    height: auto;
+}
+
+.about-escaparate figcaption{
+    text-align: start;
+    margin-left: 15px;
+    display: flex;
+    justify-content: flex-start;
+    grid-area: descripcion;
+}
+
+/***********************************************************************************************/
+/*                                        FOOTER                                               */
+/***********************************************************************************************/  
     footer{
+        grid-area: footer;
         position: sticky;
         bottom: 0;
         top: 100%;
         padding-top: 20px;
-        grid-area: footer;
         border-bottom: 1px solid var(--color-bgheader);
         box-shadow: 0 -1px 25px rgba(0, 0, 0, 0.4);
     }
@@ -365,4 +600,3 @@ header > hgroup{
     }
 
            
-      
